added baseEntity
