# src/routes/busRoute.ts
@@ -4,7 +4,6 @@ import { busController } from "../controllers/busController";
 import { errorHandler } from "../middleware/errorHandler";
 import { authenticateAdmin } from "../middleware/jwtAdmin";
 const router = new Router();
-router.use(errorHandler);
 
 router.post(
   "/admin/addbus",
@@ -12,10 +11,10 @@ router.post(
   validateAddBus,
   busController.addBus
 );
-router.post("/admin/assignbus", busController.assignBus);
-router.post("/admin/assignroute", busController.assignRoute);
-router.get("/admin/buslist", authenticateAdmin, busController.busList);
-router.get("/admin/buses/:busId", authenticateAdmin, busController.busDetails);
-router.get("/driver/driverbus/:driverId", busController.assignedBusDetails);
+router.post("/admin/assignbus",errorHandler, busController.assignBus);
+router.post("/admin/assignroute", errorHandler,busController.assignRoute);
+router.get("/admin/buslist", authenticateAdmin,errorHandler, busController.busList);
+router.get("/admin/buses/:busId", authenticateAdmin, errorHandler,busController.busDetails);
+router.get("/driver/driverbus/:driverId", errorHandler,busController.assignedBusDetails);
 
 export default router;
